tests/knowledge/testing-accounts-data/account-data-missing-default-vpc/test/us-east-1/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "Security Group for cloudrail-dev-tomer RDS Instance",
            "GroupId": "sg-05cd2833180362c2a",
            "GroupName": "cloudrail-dev-tomer-DB-SG",
            "IpPermissions": [
                {
                    "FromPort": 5432,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "10.20.0.0/20",
                            "Description": "Access from 10.20.0.0/20"
                        },
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "added manually"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 5432,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Access from Step_Functions",
                            "GroupId": "sg-06a98905659cef74a",
                            "UserId": "111111111111"
                        },
                        {
                            "Description": "Access from Lambdas",
                            "GroupId": "sg-0872f9f0eca5b8b8f",
                            "UserId": "111111111111"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "111111111111",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-tomer"
                },
                {
                    "Key": "Name",
                    "Value": "cloudrail-dev-tomer-DBSG"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-014cf9dd2e2b035a9"
        },
        {
            "Description": "SG for Step Functions",
            "GroupId": "sg-06a98905659cef74a",
            "GroupName": "Cloudrail-dev-tomer-Step-Functions-SG",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "111111111111",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-tomer-Step-Functions-SG"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Environment",
                    "Value": "dev-tomer"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                }
            ],
            "VpcId": "vpc-014cf9dd2e2b035a9"
        },
        {
            "Description": "Allow only specific ports to the load balancer",
            "GroupId": "sg-07616c29e6f86fe2c",
            "GroupName": "terraform-20201116124308236400000001",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [],
            "OwnerId": "111111111111",
            "VpcId": "vpc-7f11dd02"
        },
        {
            "Description": "Managed by Terraform",
            "GroupId": "sg-0872f9f0eca5b8b8f",
            "GroupName": "Cloudrail-dev-tomer-Lambda-SG",
            "IpPermissions": [],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "111111111111",
            "Tags": [
                {
                    "Key": "Environment",
                    "Value": "dev-tomer"
                },
                {
                    "Key": "Project",
                    "Value": "Cloudrail"
                },
                {
                    "Key": "Managed_by",
                    "Value": "terraform"
                },
                {
                    "Key": "Name",
                    "Value": "Cloudrail-dev-tomer-Lambda-SG"
                }
            ],
            "VpcId": "vpc-014cf9dd2e2b035a9"
        },
        {
            "Description": "AutoScaling-Security-Group-1 (2020-11-12T09:23:55.213Z)",
            "GroupId": "sg-0a156dcb06e4d1927",
            "GroupName": "AutoScaling-Security-Group-1",
            "IpPermissions": [
                {
                    "FromPort": 0,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "111111111111",
            "VpcId": "vpc-7f11dd02"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-0f6cb9f5c260baffe",
            "GroupName": "default",
            "IpPermissions": [],
            "IpPermissionsEgress": [],
            "OwnerId": "111111111111",
            "VpcId": "vpc-014cf9dd2e2b035a9"
        },
        {
            "Description": "default VPC security group",
            "GroupId": "sg-fc079bcc",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-fc079bcc",
                            "UserId": "111111111111"
                        }
                    ]
                }
            ],
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "111111111111",
            "VpcId": "vpc-7f11dd02"
        }
    ]
}
